# arnelify-server-python

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  index.py  pyproject.toml  requirements.txt  setup.py
arnelify_server/ipc/: __init__.py  uds.py
arnelify_server/src/tests/: .gitignore
arnelify_server/tcp1/: __init__.py
arnelify_server/tcp1/http1/: __init__.py  main.py
arnelify_server/tcp1/http2/: __init__.py  main.py
arnelify_server/tcp1/ws/: __init__.py  main.py
arnelify_server/tcp2/: __init__.py
arnelify_server/tcp2/http3/: __init__.py  main.py
arnelify_server/tcp2/wt/: __init__.py  main.py
docker/python/: build.part.yml  watch.dockerfile  watch.part.yml
src/: lib.rs
src/ipc/: mod.rs  uds.rs
src/tcp1/: http1.rs  http2.rs  mod.rs  ws.rs
src/tcp2/: http3.rs  mod.rs  wt.rs
tests/: index.py
tests/tcp1/: http1.py  http2.py  ws.py
tests/tcp2/: http3.py  wt.py
