# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "arnelify_server"
description = "Multi-language server with HTTP 3.0 and WebTransport support."
keywords = ["arnelify", "server", "quic", "http3", "webtransport"]
version = "0.9.6"
authors = ["Arnelify", "Taron Sarkisyan"]
license = "MIT"
repository = "http://github.com/arnelify/arnelify-server-python"
edition = "2024"

[lib]
name = "arnelify_server"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.100"
brotli = "8.0.2"
bytes = "1.11.0"
futures-util = "0.3.31"
h2 = "0.4.12"
h3 = "0.0.8"
h3-quinn = "0.0.10"
http = "1.3.1"
libloading = "0.9.0"
pyo3 = "0.27.0"
quinn = "0.11.9"
rustls = { version = "0.23.35", features = ["aws_lc_rs"] }
rustls-pemfile = "1.0.4" # "2.2.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tokio-rustls = "0.24" # "0.26.4"
tokio-tungstenite = "0.28"
tungstenite = "0.28"
wtransport = { version = "0.6.1", features = ["dangerous-configuration"] }

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3