[build-system]
requires = ["maturin>=1.11,<2.0"]
build-backend = "maturin"

[project]
name = "arnelify_server"
authors = [
  { name = "Arnelify" },
  { name = "Taron Sarkisyan" }
]
description = "Multi-language server with HTTP 3.0 and WebTransport support."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["version"]